// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSourceStream basic cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream basic crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream basic lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at cr followed by crlf 1 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at cr followed by crlf 2 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at end cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at end crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at end lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at space cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at space crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split at space lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split mid-code point 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "𐍈",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split mid-code point 2`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "𐍈",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split mid-code point 3`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "𐍈",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split mid-code point 4`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "𐍈",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunk split mid-code point 5`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "𐍈",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunked cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunked crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream chunked lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream comment cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream comment crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream comment lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream cr followed by crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream empty event type is treated as 'message' cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream empty event type is treated as 'message' crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream empty event type is treated as 'message' lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event ID with null byte cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "again",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event ID with null byte crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "again",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event ID with null byte lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "again",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "bar",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event IDs cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event IDs crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event IDs lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "sameid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "baz",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "replacedid",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "newid",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event types cr 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event types crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream event types lf 1`] = `
[
  MessageEvent {
    Symbol(type): "baz",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
quux",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "noeventtype",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream field with no colon cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream field with no colon crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream field with no colon lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc


foo
",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream invalid stream cr 1`] = `[]`;

exports[`EventSourceStream invalid stream crlf 1`] = `[]`;

exports[`EventSourceStream invalid stream lf 1`] = `[]`;

exports[`EventSourceStream only one leading space stripped cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream only one leading space stripped crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream only one leading space stripped lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream only one trailing newline stripped cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream only one trailing newline stripped crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream only one trailing newline stripped lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): " abc

",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream triple newline cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream triple newline crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream triple newline lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream utf-8 BOM is ignored 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo
bar",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream very chunked cr 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream very chunked crlf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;

exports[`EventSourceStream very chunked lf 1`] = `
[
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "abc
def",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
  MessageEvent {
    Symbol(type): "message",
    Symbol(kTarget): null,
    Symbol(kIsBeingDispatched): false,
    Symbol(kData): "foo",
    Symbol(kOrigin): "",
    Symbol(kLastEventId): "",
    Symbol(kSource): null,
    Symbol(kPorts): [],
  },
]
`;
